--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">musicbrainz_place</string>
     <string name="enter_country">Enter Country</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
